--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@
 data/first_test_data
 
 # models
-src/models/yolov7
-src/models/weights
 src/models/yolov7_detector
 src/models/yolov7_pose
+
+# weights
+src/weights/
